syntax = "proto3";

message Server {
  string id = 1;
  string image = 2;
  int32 port = 3;
  ServerHealth health = 4;
};

message ServerHealth {
  bool isRunning = 1;
  bool isReady = 2;
};